--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ashley_feese_portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.fdaviz.com/",
+  "homepage": "https://afeese-react-portfolio.herokuapp.com/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
